--- a/model/src/main/resources/dbConnection.properties
+++ b/model/src/main/resources/dbConnection.properties
@@ -1,5 +1,5 @@
+DB_DRIVER = com.mysql.jdbc.Driver
 DB_URL = jdbc:mysql://localhost:3306/certificate_base
 USER = root
 PASSWORD = 13041993Sofia
-CHARACTER_ENCODING = UTF-8
-autoReconnect = true
+INITIAL_SIZE = 4
