--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,12 @@
 	<description>This is REST.API.Basic project.</description>
 
 	<properties>
+
 		<maven.compiler.source>8</maven.compiler.source>
 		<maven.compiler.target>8</maven.compiler.target>
+
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
 	</properties>
 
 	<dependencies>
