--- a/service/pom.xml
+++ b/service/pom.xml
@@ -23,6 +23,15 @@
             <artifactId>model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.3.19</version>
+        </dependency>
+
     </dependencies>
+
+
 
 </project>
