--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
 		<module>model</module>
 		<module>controller</module>
 		<module>service</module>
-	</modules>
+        <module>logging</module>
+    </modules>
 
 	<groupId>com.epam.esm</groupId>
 	<artifactId>module-2</artifactId>
@@ -62,6 +63,7 @@
 	</dependencies>
 
 	<build>
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
@@ -74,7 +76,16 @@
 					<path>/</path>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.3.2</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
 		</plugins>
+
 	</build>
 
 
