--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -21,6 +21,8 @@
 
     <dependencies>
 
+        <!-- Internal dependencies -->
+
         <dependency>
             <groupId>com.epam.esm</groupId>
             <artifactId>service</artifactId>
@@ -33,11 +35,16 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <!-- Spring Web MVC dependencies -->
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>5.3.10</version>
         </dependency>
+
+        <!-- JAVA Servlet API dependencies -->
+        <!--Java Servlets is a JCP Standard technology for interacting with the web on the Java EE platform.-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -46,11 +53,17 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Jackson dependencies -->
+
+        <!--General data-binding functionality for Jackson: works on core streaming API-->
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.2.2</version>
+            <version>2.13.2</version>
         </dependency>
+
+        <!--Add-on module to support JSR-310 (Java 8 Date & Time API) data types-->
 
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
