--- a/model/pom.xml
+++ b/model/pom.xml
@@ -20,23 +20,15 @@
 
     <dependencies>
 
+        <!--Spring JBDC dependencies-->
+        <!--Connect to the database and execute SQL queries-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>5.3.10</version>
         </dependency>
 
-        <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.26</version>
-        </dependency>
+        <!--Connect to H2 database(Very fast, open source, JDBC API)-->
 
         <dependency>
             <groupId>com.h2database</groupId>
@@ -44,6 +36,21 @@
             <version>2.1.210</version>
             <scope>test</scope>
         </dependency>
+
+        <!--Connect to mysql database-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.26</version>
+        </dependency>
+
+        <!--Provides a BasicDataSource class which creates a PoolingDataSource-->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
 </project>
