--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,12 +19,17 @@
     </properties>
 
     <dependencies>
+
+        <!-- Internal dependencies -->
         <dependency>
             <groupId>com.epam.esm</groupId>
             <artifactId>model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+
+        <!--Mockito JUnit 5 support-->
+        <!--Extension that initializes mocks and handles strict stubbing-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
