--- a/controller/src/main/resources/application.properties
+++ b/controller/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 server.port = 8080
+spring.devtools.restart.enabled = true
+spring.devtools.restart.additional-path = com/epam/esm
