--- a/model/pom.xml
+++ b/model/pom.xml
@@ -32,6 +32,14 @@
             <artifactId>hibernate-envers</artifactId>
             <version>5.6.5.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
