--- a/model/src/test/Resourses/application-dev.properties
+++ b/model/src/test/Resourses/application-dev.properties
@@ -3,8 +3,6 @@ spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
