--- a/controller/src/main/resources/application-production.properties
+++ b/controller/src/main/resources/application-production.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/certificate_base?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/certificate_base?allowPublicKeyRetrieval=true&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
