--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 		<module>model</module>
 		<module>controller</module>
 		<module>service</module>
-    </modules>
+		<module>logging</module>
+	</modules>
 
 	<groupId>com.epam.esm</groupId>
 	<artifactId>module-2</artifactId>
