--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -25,6 +25,7 @@
             <groupId>com.epam.esm</groupId>
             <artifactId>service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Internal dependencies -->
@@ -32,8 +33,20 @@
             <groupId>com.epam.esm</groupId>
             <artifactId>logging</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
 
-</project> 
+    <build>
+        <plugins>
+            <!--The plugin provides Spring Boot support in Apache Maven. It allows you to package executable jar or war archives, run Spring Boot applications, generate build information
+                and start your Spring Boot application prior to running integration tests-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
+</project>
