--- a/service/pom.xml
+++ b/service/pom.xml
@@ -25,6 +25,7 @@
             <groupId>com.epam.esm</groupId>
             <artifactId>model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
