--- a/controller/src/main/resources/application-production.properties
+++ b/controller/src/main/resources/application-production.properties
@@ -4,7 +4,8 @@ spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql = true
+spring.jpa.hibernate.format_sql=true
 server.port = 8080
 spring.devtools.restart.enabled = true
 spring.devtools.restart.additional-path = com/epam/esm
