--- a/model/src/test/Resourses/application-dev.properties
+++ b/model/src/test/Resourses/application-dev.properties
@@ -3,6 +3,5 @@ spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.data-locations=classpath:data.sql
