--- a/controller/src/main/resources/application-production.properties
+++ b/controller/src/main/resources/application-production.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-login=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/certificate_base?allowPublicKeyRetrieval=true&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username = root
 spring.datasource.password = root
