--- a/model/src/test/resources/application-dev.properties
+++ b/model/src/test/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-login=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.datasource.username=
 spring.datasource.password=
