--- a/controller/src/main/resources/application-production.properties
+++ b/controller/src/main/resources/application-production.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.format_sql=true
 server.port = 8080
 spring.devtools.restart.enabled = true
 spring.devtools.restart.additional-path = com/epam/esm
+jwt.token.secretWord = Sofiya
+jwt.token.expired = 86400000
