--- a/model/src/test/resources/application-dev.properties
+++ b/model/src/test/resources/application-dev.properties
@@ -1,7 +1,6 @@
-spring.datasource.driver-class-login=org.h2.Driver
-spring.datasource.password=
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-login = org.h2.Driver
+spring.datasource.url = jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.datasource.username=
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.sql.init.data-locations=classpath:data.sql
+spring.datasource.password=
+hibernate.hbm2ddl.auto = create-drop
+hibernate.dialect = org.hibernate.dialect.H2Dialect
