Fix changes after 5th module

--- a/controller/src/main/resources/application-production.properties
+++ b/controller/src/main/resources/application-production.properties
@@ -1,10 +1,10 @@
 jwt.token.expired=86400000
 jwt.token.secretWord=Sofiya
 server.port=8080
-spring.datasource.driver-class-login=com.mysql.cj.jdbc.Driver
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/certificate_base?allowPublicKeyRetrieval=true&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
+spring.datasource.driver-class-login=com.mysql.jdbc.Driver
+spring.datasource.password=13041993Sofia
+spring.datasource.url=jdbc:mysql://database-1.cpi3pizahlji.eu-central-1.rds.amazonaws.com:3306/certificate_base
+spring.datasource.username=admin
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
